--- a/package.json
+++ b/package.json
@@ -15,17 +15,38 @@
   "dependencies": {
     "@zeit/next-typescript": "^1.1.1",
     "express": "^4.16.4",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "react": "^16.7.0",
-    "react-dom": "^16.7.0"
+    "react-dom": "^16.7.0",
+    "react-redux": "^7.0.3",
+    "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@types/express": "^4.16.0",
     "@types/next": "^7.0.6",
+    "@types/next-redux-wrapper": "^2.0.2",
     "@types/react": "^16.7.18",
     "@types/react-dom": "^16.0.11",
+    "@types/react-redux": "^7.0.8",
+    "@types/redux": "^3.6.0",
+    "@types/redux-thunk": "^2.1.0",
+    "@typescript-eslint/eslint-plugin": "^1.8.0",
+    "@typescript-eslint/parser": "^1.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
+    "eslint-plugin-import": "^2.17.2",
+    "eslint-plugin-jest": "^22.5.1",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
+    "eslint-plugin-prefer-arrow": "^1.1.5",
+    "eslint-plugin-prettier": "^3.1.0",
+    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-react-hooks": "^1.6.0",
     "fork-ts-checker-webpack-plugin": "^0.5.2",
     "nodemon": "^1.18.9",
+    "prettier": "^1.17.0",
+    "prettier-stylelint": "^0.4.2",
     "tslint": "^5.12.0",
     "typescript": "^3.2.2"
   }
