--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,14 @@
       "dom",
       "es2018"
     ],
-    "strictNullChecks": true,
+    "strictNullChecks": false,
     "moduleResolution": "node",
     "allowJs": false,
     "allowSyntheticDefaultImports": true,
     "skipLibCheck": true,
-    "noUnusedLocals": true,
+    "noUnusedLocals": false,
     "noUnusedParameters": true,
+    "noStrictGenericChecks": true,
     "removeComments": true,
     "preserveConstEnums": true,
     "outDir": "./.build"
